<resources>
    <string name="app_name">TravelBuddy</string>
    <string name="title_camera">Camera</string>
    <string name="title_document">Document</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>

    <string name="title_activity_trip">Trip</string>
    <string name="title_activity_login">Login</string>

    <string name="button_sign_in">Sign in with Google</string>
    <string name="button_profile_sign_out">Sign out</string>

    <string name="tab_text_checklist">Checklist</string>
    <string name="tab_text_document">Document</string>

    <string name="dialog_document_title">Document name</string>
    <string name="dialog_document_category">Category</string>

    <string name="travelbuddy">Travel Buddy</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="description">description</string>
    <string name="country">Country</string>
    <string name="trip_date">Date</string>

    <string name="dialog_trip_country_title">Edit Country</string>
    <string name="dialog_trip_country_hint">Type in country here</string>
    <string name="edit_me">Edit me</string>
    <string name="save_changes">Save Changes</string>
    <string name="confirm">Confirm</string>
    <string name="dialog_trip_image_title">Edit Image</string>
    <string name="dialog_trip_image_hint">Paste image link here</string>
    <string name="permission_already_granted">Permission already granted</string>
    <string name="failed_documents">Failed to load documents</string>
    <string name="failed_trips">Failed to load trips</string>
    <string name="image_notice">Use links that end with .png, .jpg or .jpeg only</string>
    <string name="failed_trips_update">Failed to update trip</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="update">Refresh the changes by clicking on other tabs</string>
    <string name="dialog_checklist_title">Add an item to the checklist</string>
    <string name="dialog_trip_document_title">Choose a document</string>
    <string name="dialog_trip_document_notice">If a document does not exist, add it in the document tab</string>

    <string-array name="category_array">
        <item>ID</item>
        <item>Ticket</item>
        <item>Reservation</item>
        <item>Other</item>
    </string-array>
</resources>