<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_blue_bg"
    android:elevation="20dp"
    tools:context=".ui.trip.TripImageDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/dialog_trip_image_title" />

    <EditText
        android:id="@+id/trip_dialog_edit_image"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/dialog_trip_image_hint"
        android:textSize="15sp"
        android:gravity="center"
        android:background="@color/white"
        android:autofillHints="@string/dialog_trip_image_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/image_notice" />

</LinearLayout>