<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.TripActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/trip_fab_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/description"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TravelBuddy.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/trip_activity_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trip_activity_text_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="?actionBarSize"
                    android:paddingStart="@dimen/appbar_padding"
                    android:paddingTop="50dp"
                    android:text="@string/country"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/trip_activity_text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/appbar_padding"
                    android:paddingTop="50dp"
                    android:text="@string/trip_date"
                    android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle" />

                <TextView
                    android:id="@+id/trip_activity_text_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/trip_activity_tabs"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/primary_light_blue" />
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/trip_activity_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/trip_efab_save"
        android:text="@string/save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/description"
        app:icon="@android:drawable/ic_menu_save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>